# COMP4

./: .gitignore  README.md  alembic.ini  database.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.windsurf/rules/: comp4rules.md
alembic/: env.py
app/: api.py  database.py  main.py  models.py  schemas.py
app/services/: comp_engine.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/src/: App.tsx.html  index.html
frontend/coverage/src/api/: client.ts.html  index.html
frontend/coverage/src/components/: CompForm.tsx.html  LoadingSpinner.tsx.html  ResultCard.tsx.html  index.html
frontend/coverage/src/hooks/: index.html  useCalculate.ts.html
frontend/e2e/: calc.spec.ts
frontend/e2e/mocks/: handlers.ts  setup.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CompForm.tsx  Header.tsx  LoadingSpinner.tsx  PageContainer.tsx  ResultCard.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  menubar.tsx
frontend/src/hooks/: useCalculate.ts  useTheme.ts
frontend/tests/: CompForm.test.tsx  ResultCard.test.tsx  setup.ts  test-env.ts
routes/: __init__.py  admin.py  employee.py
services/: __init__.py  bonus_engine.py  performance.py  qualitative.py  raf.py
tests/: test_api.py  test_comp_engine.py  test_health.py
tests/services/: test_bonus_engine.py  test_raf.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  main.tsx
ui/src/pages/: AdminDashboard.tsx  EmployeeCompStatement.tsx
ui/src/services/: api.ts
